// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#GoLang can emit consolidated nested structs 1`] = `
"type Pokemon struct {
    Abilities []PokemonAbilities \`json:\\"abilities\\" db:\\"abilities\\"\`
    BaseExperience int \`json:\\"base_experience\\" db:\\"base_experience\\"\`
    Forms []PokemonForms \`json:\\"forms\\" db:\\"forms\\"\`
    GameIndices []PokemonGameIndices \`json:\\"game_indices\\" db:\\"game_indices\\"\`
    Height int \`json:\\"height\\" db:\\"height\\"\`
    HeldItems []string \`json:\\"held_items\\" db:\\"held_items\\"\`
    Id int \`json:\\"id\\" db:\\"id\\"\`
    IsDefault bool \`json:\\"is_default\\" db:\\"is_default\\"\`
    LocationAreaEncounters string \`json:\\"location_area_encounters\\" db:\\"location_area_encounters\\"\`
    Moves []PokemonMoves \`json:\\"moves\\" db:\\"moves\\"\`
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Order int \`json:\\"order\\" db:\\"order\\"\`
    Species PokemonSpecies \`json:\\"species\\" db:\\"species\\"\`
    Sprites PokemonSprites \`json:\\"sprites\\" db:\\"sprites\\"\`
    Stats []PokemonStats \`json:\\"stats\\" db:\\"stats\\"\`
    Types []PokemonTypes \`json:\\"types\\" db:\\"types\\"\`
    Weight int \`json:\\"weight\\" db:\\"weight\\"\`
}


type PokemonAbilities struct {
    Ability NameUrl \`json:\\"ability\\" db:\\"ability\\"\`
    IsHidden bool \`json:\\"is_hidden\\" db:\\"is_hidden\\"\`
    Slot int \`json:\\"slot\\" db:\\"slot\\"\`
}
type PokemonGameIndices struct {
    GameIndex int \`json:\\"game_index\\" db:\\"game_index\\"\`
    Version NameUrl \`json:\\"version\\" db:\\"version\\"\`
}
type PokemonMoves struct {
    Move NameUrl \`json:\\"move\\" db:\\"move\\"\`
    VersionGroupDetails []PokemonMovesVersionGroupDetails \`json:\\"version_group_details\\" db:\\"version_group_details\\"\`
}
type PokemonSprites struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
    Other PokemonSpritesOther \`json:\\"other\\" db:\\"other\\"\`
    Versions PokemonSpritesVersions \`json:\\"versions\\" db:\\"versions\\"\`
}
type PokemonStats struct {
    BaseStat int \`json:\\"base_stat\\" db:\\"base_stat\\"\`
    Effort int \`json:\\"effort\\" db:\\"effort\\"\`
    Stat NameUrl \`json:\\"stat\\" db:\\"stat\\"\`
}
type PokemonTypes struct {
    Slot int \`json:\\"slot\\" db:\\"slot\\"\`
    Type NameUrl \`json:\\"type\\" db:\\"type\\"\`
}
type PokemonMovesVersionGroupDetails struct {
    LevelLearnedAt int \`json:\\"level_learned_at\\" db:\\"level_learned_at\\"\`
    MoveLearnMethod NameUrl \`json:\\"move_learn_method\\" db:\\"move_learn_method\\"\`
    VersionGroup NameUrl \`json:\\"version_group\\" db:\\"version_group\\"\`
}
type PokemonSpritesOther struct {
    DreamWorld FrontDefaultFrontFemale \`json:\\"dream_world\\" db:\\"dream_world\\"\`
    OfficialArtwork PokemonSpritesOtherOfficialArtwork \`json:\\"official_artwork\\" db:\\"official_artwork\\"\`
}
type PokemonSpritesVersions struct {
    GenerationI PokemonSpritesVersionsGenerationI \`json:\\"generation_i\\" db:\\"generation_i\\"\`
    GenerationIi PokemonSpritesVersionsGenerationIi \`json:\\"generation_ii\\" db:\\"generation_ii\\"\`
    GenerationIii PokemonSpritesVersionsGenerationIii \`json:\\"generation_iii\\" db:\\"generation_iii\\"\`
    GenerationIv PokemonSpritesVersionsGenerationIv \`json:\\"generation_iv\\" db:\\"generation_iv\\"\`
    GenerationV PokemonSpritesVersionsGenerationV \`json:\\"generation_v\\" db:\\"generation_v\\"\`
    GenerationVi PokemonSpritesVersionsGenerationVi \`json:\\"generation_vi\\" db:\\"generation_vi\\"\`
    GenerationVii PokemonSpritesVersionsGenerationVii \`json:\\"generation_vii\\" db:\\"generation_vii\\"\`
    GenerationViii PokemonSpritesVersionsGenerationViii \`json:\\"generation_viii\\" db:\\"generation_viii\\"\`
}
type PokemonSpritesOtherOfficialArtwork struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
}
type PokemonSpritesVersionsGenerationI struct {
    RedBlue RedBlueYellow \`json:\\"red_blue\\" db:\\"red_blue\\"\`
    Yellow RedBlueYellow \`json:\\"yellow\\" db:\\"yellow\\"\`
}
type PokemonSpritesVersionsGenerationIi struct {
    Crystal PokemonSpritesVersionsGenerationIiCrystal \`json:\\"crystal\\" db:\\"crystal\\"\`
    Gold PokemonSpritesVersionsGenerationIiGold \`json:\\"gold\\" db:\\"gold\\"\`
    Silver PokemonSpritesVersionsGenerationIiSilver \`json:\\"silver\\" db:\\"silver\\"\`
}
type PokemonSpritesVersionsGenerationIii struct {
    Emerald PokemonSpritesVersionsGenerationIiiEmerald \`json:\\"emerald\\" db:\\"emerald\\"\`
    FireredLeafgreen PokemonSpritesVersionsGenerationIiiFireredLeafgreen \`json:\\"firered_leafgreen\\" db:\\"firered_leafgreen\\"\`
    RubySapphire PokemonSpritesVersionsGenerationIiiRubySapphire \`json:\\"ruby_sapphire\\" db:\\"ruby_sapphire\\"\`
}
type PokemonSpritesVersionsGenerationIv struct {
    DiamondPearl PokemonSpritesVersionsGenerationIvDiamondPearl \`json:\\"diamond_pearl\\" db:\\"diamond_pearl\\"\`
    HeartgoldSoulsilver PokemonSpritesVersionsGenerationIvHeartgoldSoulsilver \`json:\\"heartgold_soulsilver\\" db:\\"heartgold_soulsilver\\"\`
    Platinum PokemonSpritesVersionsGenerationIvPlatinum \`json:\\"platinum\\" db:\\"platinum\\"\`
}
type PokemonSpritesVersionsGenerationV struct {
    BlackWhite PokemonSpritesVersionsGenerationVBlackWhite \`json:\\"black_white\\" db:\\"black_white\\"\`
}
type PokemonSpritesVersionsGenerationVi struct {
    OmegarubyAlphasapphire GenerationViiOmegarubyAlphasapphireUltraSunUltraMoonXY \`json:\\"omegaruby_alphasapphire\\" db:\\"omegaruby_alphasapphire\\"\`
    XY GenerationViiOmegarubyAlphasapphireUltraSunUltraMoonXY \`json:\\"x_y\\" db:\\"x_y\\"\`
}
type PokemonSpritesVersionsGenerationVii struct {
    Icons FrontDefaultFrontFemale \`json:\\"icons\\" db:\\"icons\\"\`
    UltraSunUltraMoon GenerationViiOmegarubyAlphasapphireUltraSunUltraMoonXY \`json:\\"ultra_sun_ultra_moon\\" db:\\"ultra_sun_ultra_moon\\"\`
}
type PokemonSpritesVersionsGenerationViii struct {
    Icons FrontDefaultFrontFemale \`json:\\"icons\\" db:\\"icons\\"\`
}
type PokemonSpritesVersionsGenerationIiCrystal struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiGold struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiSilver struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiEmerald struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiFireredLeafgreen struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiRubySapphire struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIvDiamondPearl struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationIvHeartgoldSoulsilver struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationIvPlatinum struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationVBlackWhite struct {
    Animated PokemonSpritesVersionsGenerationVBlackWhiteAnimated \`json:\\"animated\\" db:\\"animated\\"\`
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationVBlackWhiteAnimated struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type NameUrl struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type FrontDefaultFrontFemale struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
}
type RedBlueYellow struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackGray string \`json:\\"back_gray\\" db:\\"back_gray\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontGray string \`json:\\"front_gray\\" db:\\"front_gray\\"\`
}
type GenerationViiOmegarubyAlphasapphireUltraSunUltraMoonXY struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}"
`;

exports[`#GoLang can emit correctly prefixed type-names 1`] = `
"type Pokemon struct {
    Abilities []PokemonAbilities \`json:\\"abilities\\" db:\\"abilities\\"\`
    BaseExperience int \`json:\\"base_experience\\" db:\\"base_experience\\"\`
    Forms []PokemonForms \`json:\\"forms\\" db:\\"forms\\"\`
    GameIndices []PokemonGameIndices \`json:\\"game_indices\\" db:\\"game_indices\\"\`
    Height int \`json:\\"height\\" db:\\"height\\"\`
    HeldItems []string \`json:\\"held_items\\" db:\\"held_items\\"\`
    Id int \`json:\\"id\\" db:\\"id\\"\`
    IsDefault bool \`json:\\"is_default\\" db:\\"is_default\\"\`
    LocationAreaEncounters string \`json:\\"location_area_encounters\\" db:\\"location_area_encounters\\"\`
    Moves []PokemonMoves \`json:\\"moves\\" db:\\"moves\\"\`
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Order int \`json:\\"order\\" db:\\"order\\"\`
    Species PokemonSpecies \`json:\\"species\\" db:\\"species\\"\`
    Sprites PokemonSprites \`json:\\"sprites\\" db:\\"sprites\\"\`
    Stats []PokemonStats \`json:\\"stats\\" db:\\"stats\\"\`
    Types []PokemonTypes \`json:\\"types\\" db:\\"types\\"\`
    Weight int \`json:\\"weight\\" db:\\"weight\\"\`
}


type PokemonAbilities struct {
    Ability NameUrl \`json:\\"ability\\" db:\\"ability\\"\`
    IsHidden bool \`json:\\"is_hidden\\" db:\\"is_hidden\\"\`
    Slot int \`json:\\"slot\\" db:\\"slot\\"\`
}
type PokemonGameIndices struct {
    GameIndex int \`json:\\"game_index\\" db:\\"game_index\\"\`
    Version NameUrl \`json:\\"version\\" db:\\"version\\"\`
}
type PokemonMoves struct {
    Move NameUrl \`json:\\"move\\" db:\\"move\\"\`
    VersionGroupDetails []PokemonMovesVersionGroupDetails \`json:\\"version_group_details\\" db:\\"version_group_details\\"\`
}
type PokemonSprites struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
    Other PokemonSpritesOther \`json:\\"other\\" db:\\"other\\"\`
    Versions PokemonSpritesVersions \`json:\\"versions\\" db:\\"versions\\"\`
}
type PokemonStats struct {
    BaseStat int \`json:\\"base_stat\\" db:\\"base_stat\\"\`
    Effort int \`json:\\"effort\\" db:\\"effort\\"\`
    Stat NameUrl \`json:\\"stat\\" db:\\"stat\\"\`
}
type PokemonTypes struct {
    Slot int \`json:\\"slot\\" db:\\"slot\\"\`
    Type NameUrl \`json:\\"type\\" db:\\"type\\"\`
}
type PokemonMovesVersionGroupDetails struct {
    LevelLearnedAt int \`json:\\"level_learned_at\\" db:\\"level_learned_at\\"\`
    MoveLearnMethod NameUrl \`json:\\"move_learn_method\\" db:\\"move_learn_method\\"\`
    VersionGroup NameUrl \`json:\\"version_group\\" db:\\"version_group\\"\`
}
type PokemonSpritesOther struct {
    DreamWorld FrontDefaultFrontFemale \`json:\\"dream_world\\" db:\\"dream_world\\"\`
    OfficialArtwork PokemonSpritesOtherOfficialArtwork \`json:\\"official_artwork\\" db:\\"official_artwork\\"\`
}
type PokemonSpritesVersions struct {
    GenerationI PokemonSpritesVersionsGenerationI \`json:\\"generation_i\\" db:\\"generation_i\\"\`
    GenerationIi PokemonSpritesVersionsGenerationIi \`json:\\"generation_ii\\" db:\\"generation_ii\\"\`
    GenerationIii PokemonSpritesVersionsGenerationIii \`json:\\"generation_iii\\" db:\\"generation_iii\\"\`
    GenerationIv PokemonSpritesVersionsGenerationIv \`json:\\"generation_iv\\" db:\\"generation_iv\\"\`
    GenerationV PokemonSpritesVersionsGenerationV \`json:\\"generation_v\\" db:\\"generation_v\\"\`
    GenerationVi PokemonSpritesVersionsGenerationVi \`json:\\"generation_vi\\" db:\\"generation_vi\\"\`
    GenerationVii PokemonSpritesVersionsGenerationVii \`json:\\"generation_vii\\" db:\\"generation_vii\\"\`
    GenerationViii PokemonSpritesVersionsGenerationViii \`json:\\"generation_viii\\" db:\\"generation_viii\\"\`
}
type PokemonSpritesOtherOfficialArtwork struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
}
type PokemonSpritesVersionsGenerationI struct {
    RedBlue RedBlueYellow \`json:\\"red_blue\\" db:\\"red_blue\\"\`
    Yellow RedBlueYellow \`json:\\"yellow\\" db:\\"yellow\\"\`
}
type PokemonSpritesVersionsGenerationIi struct {
    Crystal PokemonSpritesVersionsGenerationIiCrystal \`json:\\"crystal\\" db:\\"crystal\\"\`
    Gold PokemonSpritesVersionsGenerationIiGold \`json:\\"gold\\" db:\\"gold\\"\`
    Silver PokemonSpritesVersionsGenerationIiSilver \`json:\\"silver\\" db:\\"silver\\"\`
}
type PokemonSpritesVersionsGenerationIii struct {
    Emerald PokemonSpritesVersionsGenerationIiiEmerald \`json:\\"emerald\\" db:\\"emerald\\"\`
    FireredLeafgreen PokemonSpritesVersionsGenerationIiiFireredLeafgreen \`json:\\"firered_leafgreen\\" db:\\"firered_leafgreen\\"\`
    RubySapphire PokemonSpritesVersionsGenerationIiiRubySapphire \`json:\\"ruby_sapphire\\" db:\\"ruby_sapphire\\"\`
}
type PokemonSpritesVersionsGenerationIv struct {
    DiamondPearl PokemonSpritesVersionsGenerationIvDiamondPearl \`json:\\"diamond_pearl\\" db:\\"diamond_pearl\\"\`
    HeartgoldSoulsilver PokemonSpritesVersionsGenerationIvHeartgoldSoulsilver \`json:\\"heartgold_soulsilver\\" db:\\"heartgold_soulsilver\\"\`
    Platinum PokemonSpritesVersionsGenerationIvPlatinum \`json:\\"platinum\\" db:\\"platinum\\"\`
}
type PokemonSpritesVersionsGenerationV struct {
    BlackWhite PokemonSpritesVersionsGenerationVBlackWhite \`json:\\"black_white\\" db:\\"black_white\\"\`
}
type PokemonSpritesVersionsGenerationVi struct {
    OmegarubyAlphasapphire GenerationViiOmegarubyAlphasapphireUltraSunUltraMoonXY \`json:\\"omegaruby_alphasapphire\\" db:\\"omegaruby_alphasapphire\\"\`
    XY GenerationViiOmegarubyAlphasapphireUltraSunUltraMoonXY \`json:\\"x_y\\" db:\\"x_y\\"\`
}
type PokemonSpritesVersionsGenerationVii struct {
    Icons FrontDefaultFrontFemale \`json:\\"icons\\" db:\\"icons\\"\`
    UltraSunUltraMoon GenerationViiOmegarubyAlphasapphireUltraSunUltraMoonXY \`json:\\"ultra_sun_ultra_moon\\" db:\\"ultra_sun_ultra_moon\\"\`
}
type PokemonSpritesVersionsGenerationViii struct {
    Icons FrontDefaultFrontFemale \`json:\\"icons\\" db:\\"icons\\"\`
}
type PokemonSpritesVersionsGenerationIiCrystal struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiGold struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiSilver struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiEmerald struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiFireredLeafgreen struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiRubySapphire struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIvDiamondPearl struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationIvHeartgoldSoulsilver struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationIvPlatinum struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationVBlackWhite struct {
    Animated PokemonSpritesVersionsGenerationVBlackWhiteAnimated \`json:\\"animated\\" db:\\"animated\\"\`
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationVBlackWhiteAnimated struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type NameUrl struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type FrontDefaultFrontFemale struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
}
type RedBlueYellow struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackGray string \`json:\\"back_gray\\" db:\\"back_gray\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontGray string \`json:\\"front_gray\\" db:\\"front_gray\\"\`
}
type GenerationViiOmegarubyAlphasapphireUltraSunUltraMoonXY struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}"
`;

exports[`#GoLang can emit deeply nested structs 1`] = `
"type Pokemon struct {
    Abilities []PokemonAbilities \`json:\\"abilities\\" db:\\"abilities\\"\`
    BaseExperience int \`json:\\"base_experience\\" db:\\"base_experience\\"\`
    Forms []PokemonForms \`json:\\"forms\\" db:\\"forms\\"\`
    GameIndices []PokemonGameIndices \`json:\\"game_indices\\" db:\\"game_indices\\"\`
    Height int \`json:\\"height\\" db:\\"height\\"\`
    HeldItems []string \`json:\\"held_items\\" db:\\"held_items\\"\`
    Id int \`json:\\"id\\" db:\\"id\\"\`
    IsDefault bool \`json:\\"is_default\\" db:\\"is_default\\"\`
    LocationAreaEncounters string \`json:\\"location_area_encounters\\" db:\\"location_area_encounters\\"\`
    Moves []PokemonMoves \`json:\\"moves\\" db:\\"moves\\"\`
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Order int \`json:\\"order\\" db:\\"order\\"\`
    Species PokemonSpecies \`json:\\"species\\" db:\\"species\\"\`
    Sprites PokemonSprites \`json:\\"sprites\\" db:\\"sprites\\"\`
    Stats []PokemonStats \`json:\\"stats\\" db:\\"stats\\"\`
    Types []PokemonTypes \`json:\\"types\\" db:\\"types\\"\`
    Weight int \`json:\\"weight\\" db:\\"weight\\"\`
}


type PokemonAbilities struct {
    Ability PokemonAbilitiesAbility \`json:\\"ability\\" db:\\"ability\\"\`
    IsHidden bool \`json:\\"is_hidden\\" db:\\"is_hidden\\"\`
    Slot int \`json:\\"slot\\" db:\\"slot\\"\`
}
type PokemonForms struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type PokemonGameIndices struct {
    GameIndex int \`json:\\"game_index\\" db:\\"game_index\\"\`
    Version PokemonGameIndicesVersion \`json:\\"version\\" db:\\"version\\"\`
}
type PokemonMoves struct {
    Move PokemonMovesMove \`json:\\"move\\" db:\\"move\\"\`
    VersionGroupDetails []PokemonMovesVersionGroupDetails \`json:\\"version_group_details\\" db:\\"version_group_details\\"\`
}
type PokemonSpecies struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type PokemonSprites struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
    Other PokemonSpritesOther \`json:\\"other\\" db:\\"other\\"\`
    Versions PokemonSpritesVersions \`json:\\"versions\\" db:\\"versions\\"\`
}
type PokemonStats struct {
    BaseStat int \`json:\\"base_stat\\" db:\\"base_stat\\"\`
    Effort int \`json:\\"effort\\" db:\\"effort\\"\`
    Stat PokemonStatsStat \`json:\\"stat\\" db:\\"stat\\"\`
}
type PokemonTypes struct {
    Slot int \`json:\\"slot\\" db:\\"slot\\"\`
    Type PokemonTypesType \`json:\\"type\\" db:\\"type\\"\`
}
type PokemonAbilitiesAbility struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type PokemonGameIndicesVersion struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type PokemonMovesMove struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type PokemonMovesVersionGroupDetails struct {
    LevelLearnedAt int \`json:\\"level_learned_at\\" db:\\"level_learned_at\\"\`
    MoveLearnMethod PokemonMovesVersionGroupDetailsMoveLearnMethod \`json:\\"move_learn_method\\" db:\\"move_learn_method\\"\`
    VersionGroup PokemonMovesVersionGroupDetailsVersionGroup \`json:\\"version_group\\" db:\\"version_group\\"\`
}
type PokemonMovesVersionGroupDetailsMoveLearnMethod struct {
    Name NameEnum \`json:\\"name\\" db:\\"name\\"\`
    Url UrlEnum \`json:\\"url\\" db:\\"url\\"\`
}
type PokemonMovesVersionGroupDetailsVersionGroup struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type PokemonSpritesOther struct {
    DreamWorld PokemonSpritesOtherDreamWorld \`json:\\"dream_world\\" db:\\"dream_world\\"\`
    OfficialArtwork PokemonSpritesOtherOfficialArtwork \`json:\\"official_artwork\\" db:\\"official_artwork\\"\`
}
type PokemonSpritesVersions struct {
    GenerationI PokemonSpritesVersionsGenerationI \`json:\\"generation_i\\" db:\\"generation_i\\"\`
    GenerationIi PokemonSpritesVersionsGenerationIi \`json:\\"generation_ii\\" db:\\"generation_ii\\"\`
    GenerationIii PokemonSpritesVersionsGenerationIii \`json:\\"generation_iii\\" db:\\"generation_iii\\"\`
    GenerationIv PokemonSpritesVersionsGenerationIv \`json:\\"generation_iv\\" db:\\"generation_iv\\"\`
    GenerationV PokemonSpritesVersionsGenerationV \`json:\\"generation_v\\" db:\\"generation_v\\"\`
    GenerationVi PokemonSpritesVersionsGenerationVi \`json:\\"generation_vi\\" db:\\"generation_vi\\"\`
    GenerationVii PokemonSpritesVersionsGenerationVii \`json:\\"generation_vii\\" db:\\"generation_vii\\"\`
    GenerationViii PokemonSpritesVersionsGenerationViii \`json:\\"generation_viii\\" db:\\"generation_viii\\"\`
}
type PokemonSpritesOtherDreamWorld struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
}
type PokemonSpritesOtherOfficialArtwork struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
}
type PokemonSpritesVersionsGenerationI struct {
    RedBlue PokemonSpritesVersionsGenerationIRedBlue \`json:\\"red_blue\\" db:\\"red_blue\\"\`
    Yellow PokemonSpritesVersionsGenerationIYellow \`json:\\"yellow\\" db:\\"yellow\\"\`
}
type PokemonSpritesVersionsGenerationIi struct {
    Crystal PokemonSpritesVersionsGenerationIiCrystal \`json:\\"crystal\\" db:\\"crystal\\"\`
    Gold PokemonSpritesVersionsGenerationIiGold \`json:\\"gold\\" db:\\"gold\\"\`
    Silver PokemonSpritesVersionsGenerationIiSilver \`json:\\"silver\\" db:\\"silver\\"\`
}
type PokemonSpritesVersionsGenerationIii struct {
    Emerald PokemonSpritesVersionsGenerationIiiEmerald \`json:\\"emerald\\" db:\\"emerald\\"\`
    FireredLeafgreen PokemonSpritesVersionsGenerationIiiFireredLeafgreen \`json:\\"firered_leafgreen\\" db:\\"firered_leafgreen\\"\`
    RubySapphire PokemonSpritesVersionsGenerationIiiRubySapphire \`json:\\"ruby_sapphire\\" db:\\"ruby_sapphire\\"\`
}
type PokemonSpritesVersionsGenerationIv struct {
    DiamondPearl PokemonSpritesVersionsGenerationIvDiamondPearl \`json:\\"diamond_pearl\\" db:\\"diamond_pearl\\"\`
    HeartgoldSoulsilver PokemonSpritesVersionsGenerationIvHeartgoldSoulsilver \`json:\\"heartgold_soulsilver\\" db:\\"heartgold_soulsilver\\"\`
    Platinum PokemonSpritesVersionsGenerationIvPlatinum \`json:\\"platinum\\" db:\\"platinum\\"\`
}
type PokemonSpritesVersionsGenerationV struct {
    BlackWhite PokemonSpritesVersionsGenerationVBlackWhite \`json:\\"black_white\\" db:\\"black_white\\"\`
}
type PokemonSpritesVersionsGenerationVi struct {
    OmegarubyAlphasapphire PokemonSpritesVersionsGenerationViOmegarubyAlphasapphire \`json:\\"omegaruby_alphasapphire\\" db:\\"omegaruby_alphasapphire\\"\`
    XY PokemonSpritesVersionsGenerationViXY \`json:\\"x_y\\" db:\\"x_y\\"\`
}
type PokemonSpritesVersionsGenerationVii struct {
    Icons PokemonSpritesVersionsGenerationViiIcons \`json:\\"icons\\" db:\\"icons\\"\`
    UltraSunUltraMoon PokemonSpritesVersionsGenerationViiUltraSunUltraMoon \`json:\\"ultra_sun_ultra_moon\\" db:\\"ultra_sun_ultra_moon\\"\`
}
type PokemonSpritesVersionsGenerationViii struct {
    Icons PokemonSpritesVersionsGenerationViiiIcons \`json:\\"icons\\" db:\\"icons\\"\`
}
type PokemonSpritesVersionsGenerationIRedBlue struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackGray string \`json:\\"back_gray\\" db:\\"back_gray\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontGray string \`json:\\"front_gray\\" db:\\"front_gray\\"\`
}
type PokemonSpritesVersionsGenerationIYellow struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackGray string \`json:\\"back_gray\\" db:\\"back_gray\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontGray string \`json:\\"front_gray\\" db:\\"front_gray\\"\`
}
type PokemonSpritesVersionsGenerationIiCrystal struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiGold struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiSilver struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiEmerald struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiFireredLeafgreen struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIiiRubySapphire struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
}
type PokemonSpritesVersionsGenerationIvDiamondPearl struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationIvHeartgoldSoulsilver struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationIvPlatinum struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationVBlackWhite struct {
    Animated PokemonSpritesVersionsGenerationVBlackWhiteAnimated \`json:\\"animated\\" db:\\"animated\\"\`
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationVBlackWhiteAnimated struct {
    BackDefault string \`json:\\"back_default\\" db:\\"back_default\\"\`
    BackFemale string \`json:\\"back_female\\" db:\\"back_female\\"\`
    BackShiny string \`json:\\"back_shiny\\" db:\\"back_shiny\\"\`
    BackShinyFemale string \`json:\\"back_shiny_female\\" db:\\"back_shiny_female\\"\`
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationViOmegarubyAlphasapphire struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationViXY struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationViiIcons struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
}
type PokemonSpritesVersionsGenerationViiUltraSunUltraMoon struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
    FrontShiny string \`json:\\"front_shiny\\" db:\\"front_shiny\\"\`
    FrontShinyFemale string \`json:\\"front_shiny_female\\" db:\\"front_shiny_female\\"\`
}
type PokemonSpritesVersionsGenerationViiiIcons struct {
    FrontDefault string \`json:\\"front_default\\" db:\\"front_default\\"\`
    FrontFemale string \`json:\\"front_female\\" db:\\"front_female\\"\`
}
type PokemonStatsStat struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}
type PokemonTypesType struct {
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Url string \`json:\\"url\\" db:\\"url\\"\`
}"
`;

exports[`#GoLang can emit nested structs 1`] = `
"type User struct {
    Id int \`json:\\"id\\" db:\\"id\\"\`
    Name string \`json:\\"name\\" db:\\"name\\"\`
    Notes []UserNotes \`json:\\"notes\\" db:\\"notes\\"\`
}


type UserNotes struct {
    Id int \`json:\\"id\\" db:\\"id\\"\`
    Text string \`json:\\"text\\" db:\\"text\\"\`
}"
`;

exports[`#GoLang can emit structs with enum 1`] = `
"type Users struct {
    Id uuid.UUID \`json:\\"id\\" db:\\"id\\"\`
    Email string \`json:\\"email\\" db:\\"email\\"\`
    FirstName string \`json:\\"first_name\\" db:\\"first_name\\"\`
    LastName string \`json:\\"last_name\\" db:\\"last_name\\"\`
    IsActive bool \`json:\\"is_active\\" db:\\"is_active\\"\`
    CreatedAt time.Time \`json:\\"created_at\\" db:\\"created_at\\"\`
    ModifiedAt time.Time \`json:\\"modified_at\\" db:\\"modified_at\\"\`
    CatchPhrase string \`json:\\"catch_phrase\\" db:\\"catch_phrase\\"\`
    CompanyName string \`json:\\"company_name\\" db:\\"company_name\\"\`
    Credits CreditsEnum \`json:\\"credits\\" db:\\"credits\\"\`
    SalesScore float32 \`json:\\"sales_score\\" db:\\"sales_score\\"\`
    Location LocationEnum \`json:\\"location\\" db:\\"location\\"\`
    Profile string \`json:\\"profile\\" db:\\"profile\\"\`
}

type CreditsEnum int
const(
    0 CreditsEnum = 0
    1 CreditsEnum = 1
    7 CreditsEnum = 7
    9 CreditsEnum = 9
    10 CreditsEnum = 10
    11 CreditsEnum = 11
    15 CreditsEnum = 15
    20 CreditsEnum = 20
)
type LocationEnum string
const(
    Denver LocationEnum = \\"Denver\\"
    Nyc LocationEnum = \\"Nyc\\"
    Remote LocationEnum = \\"Remote\\"
)
"
`;
